--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
   <div class="listings row row-cols-1 row-cols-lg-3 g-4">
     <% listings.forEach(listing => { %>
     <a href="/listings/<%= listing._id %>" class="listing-link">
-      <div class="card">
+      <div class="card listing-card">
         <img
           src="<%= listing.image.url %>"
           class="card-img-top"
