added reviews section for individual listing

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,10 +2,10 @@
 <body>
   <div class="row">
     <div class="col-8 offset-3 mt-3">
-      <h2>Listing Details</h2>
+      <h2><%= listing.title %></h2>
     </div>
     <div class="col-6 offset-3">
-      <div class="card">
+      <div class="card listing-card">
         <img
           src="<%= listing.image.url %>"
           class="card-img-top show-img"
@@ -13,7 +13,7 @@
         />
         <div class="card-body">
           <p class="card-text">
-            <strong><%= listing.title %></strong> <br />
+          <br />
             <%= listing.description %> <br />
             <strong>Price: </strong>₹<%= listing.price.toLocaleString("en-IN")
             %> <br />
@@ -32,5 +32,36 @@
           Delete Listing
         </button>
       </form>
+  </div>
+
+  <div>
+    <div class="col-6 offset-3 mt-4">
+      <h3>Add a Review</h3>
+      <form action="/listings/<%= listing._id %>/reviews" method="GET">
+        <button type="submit" class="btn btn-success">Submit Review</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="col-6 offset-3 mt-3">
+    <h3>Reviews</h3>
+    <% if (listing.reviews.length === 0) { %>
+      <p>No reviews yet.</p>
+    <% } else { %>
+        <div class="row">
+          <% listing.reviews.forEach(function(review) { %>
+          <div class="card mb-3 col-5 me-3"> 
+            <div class="card-body">
+              <h5 class="card-title">Some user</h5>
+              <p class="card-text"><%= review.comment %></p>
+              <small class="text-muted">Rating: <%= review.rating %></small>
+              <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-link btn-sm p-0 mt-2">Delete Review</button>
+              </form>
+            </div>
+          </div>
+        <% }); %>
+        </div>
+    <% } %>
   </div>
 </body>
