modified some navbar styling

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-md bg-body-tertiary border-bottom mb-1 sticky-top">
+<nav
+  class="navbar navbar-expand-md bg-body-tertiary border-bottom mb-1 sticky-top"
+  style="position: sticky !important; top: 0 !important; z-index: 999 !important;"
+>
   <div class="container-fluid">
     <a class="navbar-brand" href="/"
       ><i class="fa-brands fa-airbnb"></i>TripNest</a
