--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -22,7 +22,12 @@
   <body>
     <header><%- include("../includes/navbar.ejs") %></header>
 
-    <main><div class="container"><%- body %></div></main>
+    <main>
+      <div class="container">
+        <%- include("../includes/flash.ejs") %>
+        <%- body %>
+      </div>
+    </main>
     <footer><%- include("../includes/footer.ejs") %></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
