--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,10 @@
 <nav
   class="navbar navbar-expand-md bg-body-tertiary border-bottom mb-1 sticky-top"
-  style="position: sticky !important; top: 0 !important; z-index: 999 !important;"
+  style="
+    position: sticky !important;
+    top: 0 !important;
+    z-index: 999 !important;
+  "
 >
   <div class="container-fluid">
     <a class="navbar-brand" href="/"
@@ -23,6 +27,14 @@
         <a class="nav-link" href="/listings">All listings</a>
         <a class="nav-link" href="/listings/new">Create new listing</a>
         <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+      </div>
+      <div class="navbar-nav ms-auto">
+        <% if(!currUser) { %>
+        <a class="nav-link active" aria-current="page" href="/login">Log in</a>
+        <a class="nav-link active" href="/register">Register</a>
+        <% } else { %>
+        <a class="nav-link active" href="/logout">Log out</a>
+        <% } %>
       </div>
     </div>
   </div>
