--- a/views/user/loginU.ejs
+++ b/views/user/loginU.ejs
@@ -1,29 +1,114 @@
 <% layout("layouts/boilerplate") %>
 <div class="row">
   <div class="form-container col-6 mx-auto mt-5 p-4 border rounded-3 shadow">
-    <h2>Welcome Back</h2>
-    <form action="/login" method="POST" novalidate>
-      <div class="form-group mb-3">
-        <label for="username">Username:</label>
-        <input
-          type="text"
-          id="username"
-          name="username"
-          class="form-control"
-          required
-        />
+    <h2 class="text-center mb-4">Welcome Back</h2>
+
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs mb-3" id="loginTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link active"
+          id="username-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#usernameLogin"
+          type="button"
+          role="tab"
+          aria-controls="usernameLogin"
+          aria-selected="true"
+        >
+          Login with Username
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link"
+          id="email-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#emailLogin"
+          type="button"
+          role="tab"
+          aria-controls="emailLogin"
+          aria-selected="false"
+        >
+          Login with Email
+        </button>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="loginTabsContent">
+      <!-- Username Login Form -->
+      <div
+        class="tab-pane fade show active"
+        id="usernameLogin"
+        role="tabpanel"
+        aria-labelledby="username-tab"
+      >
+        <form action="/login" method="POST" novalidate>
+          <div class="form-group mb-3">
+            <label for="username">Username:</label>
+            <input
+              type="text"
+              id="username"
+              name="username"
+              class="form-control"
+              placeholder="Enter your username"
+              required
+            />
+          </div>
+          <div class="form-group mb-3">
+            <label for="password">Password:</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              class="form-control"
+              placeholder="Enter your password"
+              required
+            />
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Log In</button>
+        </form>
       </div>
-      <div class="form-group  mb-3">
-        <label for="password">Password:</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          class="form-control"
-          required
-        />
+
+      <!-- Email Login Form -->
+      <div
+        class="tab-pane fade"
+        id="emailLogin"
+        role="tabpanel"
+        aria-labelledby="email-tab"
+      >
+        <form action="/login" method="POST" novalidate>
+          <div class="form-group mb-3">
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="form-control"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+          <div class="form-group mb-3">
+            <label for="passwordEmail">Password:</label>
+            <input
+              type="password"
+              id="passwordEmail"
+              name="password"
+              class="form-control"
+              placeholder="Enter your password"
+              required
+            />
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Log In</button>
+        </form>
       </div>
-      <button type="submit" class="btn btn-primary">Log In</button>
-    </form>
+    </div>
+
+    <hr />
+    <p class="mt-3 text-center">
+      Don't have an account?
+      <a href="/register">Register here</a>
+    </p>
   </div>
 </div>
