added rating in the form of stars using starlink

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,14 +18,14 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/rating.css" />
   </head>
   <body>
     <header><%- include("../includes/navbar.ejs") %></header>
 
     <main>
       <div class="container">
-        <%- include("../includes/flash.ejs") %>
-        <%- body %>
+        <%- include("../includes/flash.ejs") %> <%- body %>
       </div>
     </main>
     <footer><%- include("../includes/footer.ejs") %></footer>
