--- a/views/reviews/reviewForm.ejs
+++ b/views/reviews/reviewForm.ejs
@@ -21,23 +21,54 @@
         ></textarea>
         <div class="invalid-feedback">Please add a comment.</div>
       </div>
-
       <div class="mb-4">
         <label for="reviewRating" class="form-label">Rating</label>
-        <select
-          name="review[rating]"
-          id="reviewRating"
-          class="form-select"
-          required
-        >
-          <option value="" disabled selected>Rate your experience</option>
-          <option value="1">1 - Very Poor</option>
-          <option value="2">2 - Poor</option>
-          <option value="3">3 - Average</option>
-          <option value="4">4 - Good</option>
-          <option value="5">5 - Excellent</option>
-        </select>
-        <div class="invalid-feedback">Please select a rating.</div>
+        <fieldset class="starability-heart">
+          <input
+            type="radio"
+            id="no-rate"
+            class="input-no-rate"
+            name="review[rating]"
+            value="1"
+            checked
+            aria-label="No rating."
+          />
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
 
       <button type="submit" class="btn btn-primary w-100">Submit Review</button>
