--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -9,6 +9,7 @@
       method="POST"
       novalidate
       class="needs-validation"
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
@@ -82,26 +83,19 @@
       </div>
 
       <div class="mb-3">
-        <label for="fileName" class="form-label">Image File Name</label>
-        <input
-          type="text"
-          id="fileName"
-          class="form-control"
-          name="listing[image][fileName]"
-          value="<%= listing.image.fileName %>"
-          placeholder="Enter image file name"
-        />
+        Original Image :<br />
+        <img src="<%= originalImageUrl %>" alt="Original Image" class="img-fluid" />
       </div>
 
-      <div class="mb-4">
-        <label for="image" class="form-label">Image URL</label>
+      <div class="mb-3">
+        <label for="image" class="form-label">Upload new image</label>
         <input
-          type="text"
+          type="file"
           id="image"
+          name="listing[image]"
           class="form-control"
-          name="listing[image][url]"
-          value="<%= listing.image.url %>"
           placeholder="Enter image URL"
+          value="<%= listing.image.url %>"
         />
       </div>
 
