fixed some styling issues

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="/css/rating.css" />
   </head>
   <body>
-    <header><%- include("../includes/navbar.ejs") %></header>
+    <%- include("../includes/navbar.ejs") %>
 
     <main>
-      <div class="container">
+      <div class="container-fluid">
         <%- include("../includes/flash.ejs") %> <%- body %>
       </div>
     </main>
