--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  /* padding-top: 70px; */
 }
 
 main {
@@ -17,7 +18,7 @@ main {
   flex: 1; /* Take up remaining space */
 }
 
-.container {
+.container-fluid {
   gap: 20px;
   flex: 1;
 }
