--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -5,7 +5,7 @@
     <i class="fa-brands fa-x-twitter"></i>
     <i class="fa-brands fa-linkedin-in"></i>
   </div>
-  <div class="copyright">© 2023 BnB Lite. All rights reserved.</div>
+  <div class="copyright">© 2023 TripNest. All rights reserved.</div>
   <div class="f-info-links">
     <a href="#">Privacy Policy</a>
     <a href="#">Terms of Service</a>
