--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-md bg-body-tertiary border-bottom mb-1 sticky-top"
+  class="navbar fixed-top navbar-expand-md bg-body-tertiary border-bottom mb-1"
   style="
     position: sticky !important;
     top: 0 !important;
@@ -7,7 +7,7 @@
   "
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"
+    <a class="navbar-brand" href="/listings"
       ><i class="fa-brands fa-airbnb"></i>TripNest</a
     >
     <button
@@ -23,17 +23,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/listings">All listings</a>
+        <!-- <a class="nav-link active" aria-current="page" href="/">Home</a> -->
+
         <a class="nav-link" href="/listings/new">Create new listing</a>
         <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
       </div>
       <div class="navbar-nav ms-auto">
+        <a class="nav-link active" href="/listings">All listings</a>
         <% if(!currUser) { %>
-        <a class="nav-link active" aria-current="page" href="/login">Log in</a>
-        <a class="nav-link active" href="/register">Register</a>
+        <a class="nav-link active" aria-current="page" href="/login"><b>Log in</b></a>
+        <a class="nav-link active" href="/register"><b>Register</b></a>
         <% } else { %>
-        <a class="nav-link active" href="/logout">Log out</a>
+        <a class="nav-link active" href="/logout"><b>Log out</b></a>
         <% } %>
       </div>
     </div>
