--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div
-    class="form-container col-6 mx-auto mt-5 p-4 border rounded-3 shadow mb-5"
+    class="form-container col-12 col-md-8 col-lg-6 mx-auto mt-5 p-4 border rounded-3 shadow mb-5"
   >
     <h3 class="text-center mb-4">Create New Listing</h3>
 
